# pydantic-demo

./: pyproject.toml  talk.ipynb
fields/: computed.py  discriminator.py  private.py
models/: config.py  namespaces.py  orm.py
pydantic-validations/: 2_field_constraints.py  4_enum_as_type_of_field.py  5_annotated_validators.py
validations/: 1_aliases.py  3_custom_validators.py  6_automatic_cast.py  decorators.py
